<resources>
    <string name="app_name">T9 Keyboard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emoticon">:D</string>
    <string name="btn_at">\@</string>
    <string name="btn_abc">abc</string>
    <string name="btn_def">def</string>
    <string name="btn_ghi">ghi</string>
    <string name="btn_jkl">jkl</string>
    <string name="btn_mno">mno</string>
    <string name="btn_pqrs">pqrs</string>
    <string name="btn_tuv">tuv</string>
    <string name="btn_wxyz">wxyz</string>
    <string name="btn_del">del</string>
    <string name="btn_shift">shf</string>
    <string name="exclamation_mark">!</string>
    <string name="question_mark">\?</string>
    <string name="comma">,</string>
    <string name="dot">.</string>
    <string name="colon">:</string>
</resources>