<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="@dimen/_156sdp"
    android:layout_width="match_parent"
    android:background="@color/keyboard_background_color"
    android:orientation="horizontal">
    <TableLayout
        android:layout_width="@dimen/_60sdp"
        android:layout_height="match_parent">
        <TableRow>
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_emoticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emoticon"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_60sdp">
        <TableRow>
            <Button
                android:id="@+id/button_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_at"
                style="@style/ButtonStyle"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_abc"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_def"/>
        </TableRow>
        <TableRow>
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_ghi"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_jkl"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_mno"/>
        </TableRow>
        <TableRow>
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_pqrs"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_tuv"/>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_wxyz"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="@dimen/_60sdp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_260sdp">
        <TableRow>
            <Button
                style="@style/ButtonStyle"
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_del"/>
        </TableRow>
    </TableLayout>
</RelativeLayout>